# HoldemSolver

./: .dockerignore  .env.sample  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker.compose.dev.yml  package.json
api/: .env  Cargo.toml  Dockerfile.dev
api/scripts/: run_dev.sh
api/src/: auth.rs  session.rs
api/src/environment/: mod.rs
api/src/graphql/: context.rs
api/src/model/: auth.rs  mod.rs
backend/: Cargo.toml  Dockerfile.dev
backend/src/: main.rs
data/: postgresql.conf  postmaster.pid
data/base/1/: 112  1249_vm  1259_vm  13245_vm  13250  13254  13255  13255_vm  13259  13264  174  2187  2601_vm  2605_vm  2610_vm  2615  2618  2619  2652  2653  2655  2657  2663  2664  2666  2669  2675  2679  2680  2681  2684  2686  2687  2688  (+33 more)
data/global/: 1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  2847  2965  2967  3593  4061  4176  4178  4182  4184  4186  6001  6002  6114  6115  pg_control
data/pg_stat_tmp/: global.stat
frontend/: .eslintrc.js  Dockerfile.dev  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  Board.ts  HandRange.ts  apollo.ts  index.tsx  lib.ts  styles.ts
public/: index.html
public/sf-ui-text-2/: example.html  style.css
src/: App.tsx  Board.ts  HandRange.ts  index.tsx  lib.ts  styles.ts
src/components/: Button.tsx  CardMatrix.tsx  Input.tsx  Matrix.tsx  Slider.tsx  SuitMatrix.tsx  TextArea.tsx
src/containers/: Modal.tsx  RangeSelector.tsx  RightSider.tsx
src/redux/: index.ts
(+164 files in other folders)
