[package]
name = "backend"
version = "0.1.0"
authors = ["Kyle Murphy <kwmurph2@asu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper" }
env_logger = "0.8.1"
futures = "0.3.1"
log = "0.4.8"
reqwest = { version = "0.10", features = ["rustls-tls"] }
tokio = { version = "0.2", features = ["rt-core", "macros"] }
warp = "0.2"